--- a/src/components/RegisterModal/RegisterModal.module.css
+++ b/src/components/RegisterModal/RegisterModal.module.css
@@ -61,3 +61,9 @@ h2 {
     margin-bottom: 10px;
     text-align: center;
 }
+
+.error {
+    color: red;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
