--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,6 +7,7 @@
     color: black;
     padding: 10px 20px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+
 }
 
 .logo {
@@ -44,6 +45,74 @@
     padding: 13px 40px;
 }
 
+.bookmarkBtn {
+    position: relative;
+    right: 50%;
+    padding: 10px 40px;
+    border: none;
+    border-radius: 20px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.addstoryBtn {
+    position: relative;
+    right: 50%;
+    margin-left: 0.2rem;
+    margin-right: 1rem;
+    padding: 3px 60px;
+    border: none;
+    border-radius: 20px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    font-size: 0.9em;
+    font-weight: 600;
+}
+
+.profileIcon {
+    position: relative;
+    right: 200px;
+    border: none;
+    border-radius: 100%;
+    height: 48.9px;
+}
+
+.logoutBtn {
+    position: relative;
+    right: 27px;
+}
+
+.hamburgerMenu {
+    display: inline-block;
+    cursor: pointer;
+    margin-left: -11rem;
+}
+
+.bar {
+    width: 30px;
+    height: 3px;
+    background-color: #333;
+    margin: 6px 0;
+}
+
+.dropdownContent {
+    position: absolute;
+    top: calc(100% + 10px);
+    right: 130px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.navItem {
+    position: relative;
+}
 
 /* Responsive styles */
 /* @media screen and (max-width: 768px) {
