--- a/src/components/Categories/Categories.module.css
+++ b/src/components/Categories/Categories.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 40px;
+    padding: 15px;
 }
 
 .categoryCard {
@@ -14,6 +14,7 @@
     overflow: hidden;
     margin-right: 3rem;
     cursor: pointer;
+
 }
 
 
@@ -21,7 +22,7 @@
     margin-right: 0;
 }
 
-.cardContent {
+.categoryContent {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,8 +31,8 @@
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-.cardContent h2 {
+.categoryContent h2 {
     color: white;
-    font-size: 24px;
+    font-size: 1.8em;
     text-align: center;
 }
