--- a/src/components/LoginModal/LoginModal.module.css
+++ b/src/components/LoginModal/LoginModal.module.css
@@ -4,60 +4,99 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.9);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.modal {
-    background-color: white;
+/* .modal {
+    background-color: rgb(253, 253, 253);
     padding: 60px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     max-width: 400px;
     width: 100%;
     position: relative;
+} */
+
+.modal {
+    align-items: center;
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 0 4px 30px 0 #ffffff40;
+    display: flex;
+    flex-direction: column;
+    height: 482px;
+    width: 650px;
+    justify-content: center;
+    position: relative;
 }
 
 
 .close {
     position: absolute;
-    top: 10px;
-    right: 15px;
+    top: 30px;
+    right: 50px;
     cursor: pointer;
+    color: red;
+    border: 2px solid red;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 1.2em;
 }
+
 
 .formGroup {
     display: flex;
-    flex-direction: column;
     margin-bottom: 10px;
 }
 
-label {
+.loginForm label {
     display: block;
-    margin-bottom: 5px;
-    border: 1px solid red;
-    width: 85px;
-}
-
-input {
-    margin-bottom: 30px;
-    padding: 8px;
-    width: 100%;
-}
-
-button {
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: white;
+    margin-bottom: 0;
+    margin-right: 40px;
     border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-left: 40%;
+    width: 220px;
+    font-size: 1.25rem;
+    font-weight: 700;
 }
 
-h2 {
-    margin-bottom: 10px;
+.loginForm input {
+    margin-bottom: 20px;
+    padding: 7px;
+    width: 100%;
+    border: 1px solid #000;
+    box-sizing: border-box;
+}
+
+.loginForm button {
+    padding: 10px 20px;
+    background-color: #4a9ffa;
+    color: black;
+    font-size: 1.25rem;
+    font-weight: 500;
+    border: none;
+    border-radius: 18.6px;
+    cursor: pointer;
+    margin-left: 1rem;
+    margin-top: 1.5rem;
+
+}
+
+.loginForm h2 {
+    margin-bottom: 60px;
     text-align: center;
+}
+
+.error {
+    color: red;
+    font-size: 0.9em;
+    margin-bottom: 10px;
+    margin-left: 60px;
 }
