--- a/src/components/Categories/Categories.module.css
+++ b/src/components/Categories/Categories.module.css
@@ -2,18 +2,20 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 15px;
+    padding: 10px;
+    gap: 1rem;
 }
 
 .categoryCard {
-    width: 220px;
-    height: 190px;
+    width: 230px;
+    height: 210px;
     background-size: cover;
     background-position: center;
     border-radius: 10px;
     overflow: hidden;
     margin-right: 3rem;
     cursor: pointer;
+    padding: 10px 3px;
 
 }
 
