--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -45,71 +45,81 @@
     padding: 13px 40px;
 }
 
-.bookmarkBtn {
-    position: relative;
-    right: 50%;
-    padding: 10px 40px;
+.bookmarkBtn,
+.addstoryBtn {
+    /* margin-left: 0.5rem;
+    margin-right: 20rem; */
     border: none;
     border-radius: 20px;
-    background-color: #007bff;
+    background-color: #FF7373;
     color: white;
     cursor: pointer;
     font-size: 1.2em;
     font-weight: 600;
+    padding: 10px 25px;
 }
 
-.addstoryBtn {
-    position: relative;
-    right: 50%;
-    margin-left: 0.2rem;
-    margin-right: 1rem;
-    padding: 3px 60px;
-    border: none;
-    border-radius: 20px;
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-    font-size: 0.9em;
-    font-weight: 600;
+.storyBtns {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin-right: 10rem;
 }
+
 
 .profileIcon {
     position: relative;
-    right: 200px;
+    right: 110px;
     border: none;
     border-radius: 100%;
-    height: 48.9px;
+    height: 46px;
 }
 
 .logoutBtn {
-    position: relative;
-    right: 27px;
+    /* position: relative;
+    right: 27px; */
+    border: none;
+    border-radius: 20px;
+    background-color: #FF7373;
+    color: white;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 600;
+    padding: 10px 30px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 .hamburgerMenu {
     display: inline-block;
     cursor: pointer;
-    margin-left: -11rem;
+    margin-left: -3rem;
 }
 
 .bar {
     width: 30px;
     height: 3px;
-    background-color: #333;
+    background-color: #000000;
     margin: 6px 0;
 }
 
 .dropdownContent {
     position: absolute;
-    top: calc(100% + 10px);
-    right: 130px;
+    top: calc(100% + 16px);
+    right: 5px;
     background-color: #fff;
     border: 1px solid #ccc;
     padding: 10px;
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    height: 100px;
+    width: 150px;
 }
 
+.dropdownContent p {
+    text-align: center;
+    margin-top: 15px;
+}
 .navItem {
     position: relative;
 }
