--- a/src/components/StoryModal/StoryModal.module.css
+++ b/src/components/StoryModal/StoryModal.module.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.9);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,27 +13,31 @@
 .modal {
     background-color: white;
     padding: 50px;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     max-width: 600px;
+    max-height: 450px;
     width: 100%;
+    height: 100%;
     position: relative;
 }
 
 
 .close {
     position: absolute;
-    top: 30px;
-    right: 50px;
+    top: 20px;
+    right: 20px;
     cursor: pointer;
     color: red;
-    border: 1px solid red;
+    border: 2px solid red;
     border-radius: 50%;
-    width: 35px;
-    height: 35px;
+    width: 20px;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 700;
+    font-size: 0.8em;
 }
 
 .slidesSelectors {
@@ -43,15 +47,57 @@
 }
 
 .slidesSelectors .slideSelector {
-    padding: 1.15rem;
+    padding: 1.2rem 1rem;
     border-radius: 10px;
     box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.05);
     margin-bottom: 40px;
     cursor: pointer;
+    font-weight: 600;
 }
 
 .slidesSelectors .slideSelector.selected {
     border: 2px solid #007bff;
+}
+
+.slideNavBtns {
+    display: flex;
+    gap: 0.4rem;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.prevBtn,
+.nextBtn {
+    font-size: 1.125rem;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+
+.prevBtn:nth-of-type(1) {
+    background-color: rgb(86, 255, 94);
+    padding: 8px 20px;
+}
+
+.nextBtn:nth-last-of-type(2) {
+    background-color: #65b0ff;
+    padding: 8px 35px;
+}
+
+.postBtn {
+    padding: 10px 40px;
+    font-size: 1.125rem;
+    background-color: #FF7373;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    margin-left: 14rem;
+    font-weight: 600;
 }
 
 .formGroup {
@@ -59,11 +105,16 @@
     margin-bottom: 10px;
 }
 
+.categorySelect option {
+    font-size: 1.4em;
+    font-weight: 600;
+}
+
 .storiesForm label {
     display: block;
     margin-bottom: 0;
     border: none;
-    width: 220px;
+    width: 150px;
     font-size: 1.25rem;
     font-weight: 700;
 }
@@ -74,20 +125,24 @@
     margin-bottom: 20px;
     padding: 8px;
     width: 100%;
-    border: 1px solid #000;
+    max-width: 300px;
+    border: 1.5px solid #000;
     box-sizing: border-box;
     resize: none;
 }
 
-.storiesForm button {
-    padding: 10px 28px;
-    font-size: 1.125rem;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    margin-left: 40%;
+.storiesForm input::placeholder,
+.storiesForm textarea::placeholder {
+    color: #555;
+    font-size: 1.1em;
+    font-weight: 600;
+}
+
+
+
+.storiesForm p {
+    font-size: 0.7em;
+    margin-left: 31rem;
     font-weight: 600;
 }
 
