--- a/src/components/StoryModal/StoryModal.module.css
+++ b/src/components/StoryModal/StoryModal.module.css
@@ -16,7 +16,7 @@
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     max-width: 600px;
-    max-height: 450px;
+    max-height: 460px;
     width: 100%;
     height: 100%;
     position: relative;
@@ -151,8 +151,14 @@ h2 {
     text-align: center;
 }
 
-.error {
+.ErrorSection {
     color: red;
-    font-size: 12px;
-    margin-bottom: 10px;
+   margin-right: -100px;
+   margin-top: -20px;
+}
+
+.ErrorSection p {
+    position: relative;
+    right: 18rem;
+    font-size: 1em;
 }
