--- a/src/components/RegisterModal/RegisterModal.module.css
+++ b/src/components/RegisterModal/RegisterModal.module.css
@@ -52,7 +52,7 @@
 }
 
 
-.formGroup {
+.registerFormGroup {
     display: flex;
     margin-bottom: 10px;
 }
@@ -75,17 +75,27 @@
     box-sizing: border-box;
 }
 
-.registerForm button {
-    padding: 10px 20px;
+.registerForm .eyeBtn{
+    position: relative;
+    left: 12rem;
+    bottom: 3.5rem;
+    background: none;
+    border: none;
+    padding: 1px 2px;
+    font-size: 0.9em;
+}
+
+.registerForm button:nth-of-type(2) {
+    padding: 9.5px 25px;
     background-color: #4a9ffa;
     color: black;
-    font-size: 1.25rem;
-    font-weight: 500;
+    font-size: 1.1rem;
+    font-weight: 600;
     border: none;
     border-radius: 18.6px;
     cursor: pointer;
-    margin-left: 1rem;
-    margin-top: 1.5rem;
+    margin-left: 0.1rem;
+    margin-top: 0.5rem;
 
 }
 
