--- a/src/components/LoginModal/LoginModal.module.css
+++ b/src/components/LoginModal/LoginModal.module.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 9999;
 }
 
 /* .modal {
@@ -77,7 +78,7 @@
 
 
 
-.loginForm .eyeBtn{
+.loginForm .eyeBtn {
     position: relative;
     left: 12rem;
     bottom: 3.5rem;
