--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     background-color: white;
     color: black;
-    padding: 10px 20px;
+    padding: 40px 20px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
 
 }
@@ -57,6 +57,7 @@
     font-size: 1.2em;
     font-weight: 600;
     padding: 10px 25px;
+    text-decoration: none;
 }
 
 .storyBtns {
@@ -75,9 +76,8 @@
     height: 46px;
 }
 
-.logoutBtn {
-    /* position: relative;
-    right: 27px; */
+/* .logoutBtn {
+
     border: none;
     border-radius: 20px;
     background-color: #FF7373;
@@ -86,9 +86,9 @@
     font-size: 1em;
     font-weight: 600;
     padding: 10px 30px;
-    margin-top: 50px;
+    margin-top: 60px;
     margin-left: 45px;
-}
+} */
 
 .hamburgerMenu {
     display: inline-block;
@@ -120,6 +120,22 @@
     text-align: center;
     margin-top: 15px;
 }
+
+.dropdownContent  a {
+    position: absolute;
+    bottom: 20px;
+    left: 50px;
+    text-decoration: none;
+    border: none;
+    border-radius: 20px;
+    background-color: #FF7373;
+    color: white;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 600;
+    padding: 10px 30px;
+}
+
 .navItem {
     position: relative;
 }
