--- a/src/components/StoryModal/StoryModal.module.css
+++ b/src/components/StoryModal/StoryModal.module.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 999;
 }
 
 .modal {
@@ -15,8 +16,8 @@
     padding: 50px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    max-width: 600px;
-    max-height: 460px;
+    max-width: 700px;
+    max-height: 600px;
     width: 100%;
     height: 100%;
     position: relative;
@@ -43,19 +44,46 @@
 .slidesSelectors {
     display: flex;
     gap: 1rem;
+    margin-top: 1rem;
 
 }
 
+.slideSelectorDynamic {
+    position: relative;
+}
+
+.slideSelectorDynamic span {
+    position: absolute;
+    right: -3px;
+    top: -3px;
+    color: red;
+    font-size: 12px;
+    border: 1px solid red;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    display: flex;
+    justify-content: center;
+    align-content: inherit;
+}
 .slidesSelectors .slideSelector {
+    display: block;
+    width: fit-content;
+    font-size: 1rem;
     padding: 1.2rem 1rem;
     border-radius: 10px;
     box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.05);
     margin-bottom: 40px;
     cursor: pointer;
     font-weight: 600;
+    border: 2px solid #fff;
 }
 
-.slidesSelectors .slideSelector.selected {
+.slidesSelectors input {
+    display: none;
+}
+
+.slidesSelectors input:checked +.slideSelector {
     border: 2px solid #007bff;
 }
 
