--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,12 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: DM Sans;
+}
+
+body {
+  padding-bottom: 2rem;
 }
 
 html {
